// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionNavItem LinkedSectionTitle should render link when section has pages 1`] = `
<SectionNavItem__Link
  activeClassName="selected"
  aria-disabled={false}
  to="/questionnaire/1/design/3/2"
>
  <SectionNavItem__SectionTitle>
    Section
  </SectionNavItem__SectionTitle>
</SectionNavItem__Link>
`;

exports[`SectionNavItem LinkedSectionTitle should render without link when section has no pages 1`] = `
<SectionNavItem__SectionTitle>
  Section
</SectionNavItem__SectionTitle>
`;

exports[`SectionNavItem should render 1`] = `
<SectionNavItem__StyledSectionNavItem
  duration={123}
  innerRef={[Function]}
  style={Object {}}
>
  <div
    className="section-title-wrapper"
  >
    <LinkedSectionTitle
      questionnaire={
        Object {
          "id": "1",
          "sections": Array [
            Object {
              "id": "3",
              "pages": Array [
                Object {
                  "id": "2",
                  "title": "Page",
                },
              ],
              "title": "Section",
            },
          ],
          "title": "Questionnaire",
        }
      }
      section={
        Object {
          "id": "3",
          "pages": Array [
            Object {
              "id": "2",
              "title": "Page",
            },
          ],
          "title": "Section",
        }
      }
    />
    <Tooltip
      content="Delete section"
      offset={
        Object {
          "right": -5,
        }
      }
    >
      <SectionNavItem__SectionDeleteButton
        aria-label="Delete section"
        onClick={[Function]}
        type="button"
      >
        ×
      </SectionNavItem__SectionDeleteButton>
    </Tooltip>
  </div>
  <PageNav
    onDelete={[Function]}
    questionnaire={
      Object {
        "id": "1",
        "sections": Array [
          Object {
            "id": "3",
            "pages": Array [
              Object {
                "id": "2",
                "title": "Page",
              },
            ],
            "title": "Section",
          },
        ],
        "title": "Questionnaire",
      }
    }
    section={
      Object {
        "id": "3",
        "pages": Array [
          Object {
            "id": "2",
            "title": "Page",
          },
        ],
        "title": "Section",
      }
    }
  />
  <SectionNavItem__AddPageBtn
    id="btn-add-page"
    onClick={[Function]}
  >
    + Add page
  </SectionNavItem__AddPageBtn>
</SectionNavItem__StyledSectionNavItem>
`;
